
    YARN-5197. RM leaks containers if running container disappears from 
    node update. Contributed by Jason Lowe.

    YARN-4393. Fix intermittent test failure for TestResourceLocalizationService
    #testFailedDirsResourceRelease (Varun Saxana via rohithsharmaks)

    YARN-5353. ResourceManager can leak delegation tokens when they are shared across
    apps. (Jason Lowe via Varun Saxena)

Release 2.6.4 - 2016-02-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    YARN-2975. FSLeafQueue app lists are accessed without required locks. (kasha)

    YARN-3857. Memory leak in ResourceManager with SIMPLE mode. (mujunchao via zxu)

    YARN-3535. Scheduler must re-request container resources when RMContainer transitions
    from ALLOCATED to KILLED. (rohithsharma and peng.zhang via asuresh)

    YARN-4452. NPE when submit Unmanaged application. (Naganarasimha G R
    via junping_du)

    YARN-3893. Both RM in active state when Admin#transitionToActive failure 
    from refeshAll() (Bibin A Chundatt via rohithsharmaks)

    YARN-3697. FairScheduler: ContinuousSchedulingThread can fail to shutdown.
    (Zhihai Xu via kasha)

    YARN-4546. ResourceManager crash due to scheduling opportunity overflow.
    (Jason Lowe via junping_du)

    YARN-2902. Killing a container that is localizing can orphan resources in
    the DOWNLOADING state (Varun Saxena via jlowe)

    YARN-4354. Public resource localization fails with NPE. (Jason Lowe via
    junping_du)

    YARN-4380. TestResourceLocalizationService.testDownloadingResourcesOnContainerKill
    fails intermittently. (Varun Saxena via ozawa)

    YARN-4180. AMLauncher does not retry on failures when talking to NM.
    (adhoot)

    YARN-3849. Too much of preemption activity causing continuos killing of
    containers across queues. (Sunil G via wangda)

    YARN-3842. NMProxy should retry on NMNotYetReadyException. 
    (Robert Kanter via kasha)
